examples/fail/unexpected_token.uplp
let x = 1 let y = 2 in y 